Add Vercel deployment configuration for backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/vercel_handler.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.py" }
+    {
+      "src": "/(.*)",
+      "dest": "api/vercel_handler.py"
+    }
   ]
 }
 
