Configure FastAPI as Vercel serverless function
- Update vercel.json with functions configuration (Python 3.12, 10s timeout, 1GB memory)
- Add mangum to requirements.txt for Vercel compatibility
- Update CORS configuration for public access
- Improve frontend error handling
- Add comprehensive deployment documentation
- Configure for public accessibility

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://the-ai-engineer-challenge-v3g4.vercel.app/api/:path*"
+      "destination": "https://your-backend-url.vercel.app/api/:path*"
     }
   ]
 }
