--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/vercel_handler.py",
-      "use": "@vercel/python"
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.12",
+      "maxDuration": 10,
+      "memory": 1024
     }
-  ],
+  },
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/vercel_handler.py"
+      "dest": "/api/vercel_handler.py"
     }
   ]
 }
